syntax = "proto3";

package reviews;

option go_package = "github.com/zenor0/bookinfo/proto/reviews";

service ReviewService {
  rpc CreateReview(CreateReviewRequest) returns (Review);
  rpc GetReview(GetReviewRequest) returns (Review);
  rpc GetBookReviews(GetBookReviewsRequest) returns (GetBookReviewsResponse);
  rpc GetUserReviews(GetUserReviewsRequest) returns (GetUserReviewsResponse);
  rpc UpdateReview(UpdateReviewRequest) returns (Review);
  rpc DeleteReview(DeleteReviewRequest) returns (Empty);
}

message Empty {}

message Review {
  uint32 id = 1;
  uint32 book_id = 2;
  uint32 user_id = 3;
  string username = 4;
  string content = 5;
  double rating = 6;
  string created_at = 7;
  string updated_at = 8;
}

message ReviewResponse {
  Review review = 1;
  double rating = 2;
  string rating_html = 3;
  string color = 4;
}

message CreateReviewRequest {
  Review review = 1;
}

message GetReviewRequest {
  uint32 id = 1;
}

message GetBookReviewsRequest {
  uint32 book_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message GetBookReviewsResponse {
  repeated ReviewResponse data = 1;
  message Meta {
    int32 page = 1;
    int32 page_size = 2;
    int32 total = 3;
  }
  Meta meta = 2;
}

message GetUserReviewsRequest {
  uint32 user_id = 1;
}

message GetUserReviewsResponse {
  repeated ReviewResponse reviews = 1;
}

message UpdateReviewRequest {
  Review review = 1;
}

message DeleteReviewRequest {
  uint32 id = 1;
} 